# excalimap

./: .gitignore  README.md  docker-compose.yml  generate.sh  pyproject.toml
docs/superpowers/plans/: 2026-03-26-excalimap-restructure.md
examples/ad/: conf.yml  no_creds.md
examples/demo/: conf.yml
src/: config.py  main.py  parserjson.py  parsermd.py  utils.py
src/models/: arrow.py  command.py  container.py  icon.py  info.py  maintitle.py  mapobject.py  out.py  title.py
