[project]
name = "excalimap"
version = "1.0.0"
description = "Mindmap creation from Markdown to Excalidraw"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pillow",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
